Added the use case and route of find all the trainings and added a remote data base

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 # spring.data.mongodb.uri=mongodb+srv://admin:admin@cluster0.2pbel.mongodb.net/academic-system?retryWrites=true&w=majority
 
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=demo
+spring.data.mongodb.uri=mongodb+srv://santiagoposadag:Admin8080.spg@empleado-restful.w5uje.mongodb.net/demo?retryWrites=true&w=majority
+
+# spring.data.mongodb.host=localhost
+# spring.data.mongodb.port=27017
+# spring.data.mongodb.database=demo
