HU06#17 added new validations for create and update use cases

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-spring.data.mongodb.uri=mongodb+srv://camiloxj:mongopassword@cluster0.9zcrx.mongodb.net/reactiveResources?retryWrites=true&w=majority
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=Program
