--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,1 @@
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=Program
+spring.data.mongodb.uri=mongodb+srv://admin:admin@cluster0.2pbel.mongodb.net/academic-system?retryWrites=true&w=majority 
