--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,1 @@
-#spring.data.mongodb.uri=mongodb+srv://admin:admin@cluster0.2pbel.mongodb.net/academic-system?retryWrites=true&w=majority
-spring.data.mongodb.uri=mongodb+srv://santiagoposadag:Admin8080.spg@empleado-restful.w5uje.mongodb.net/demo?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://admin:admin@cluster0.2pbel.mongodb.net/academic-system?retryWrites=true&w=majority
