--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-spring.data.mongodb.uri=mongodb+srv://camiloxj:mongopassword@cluster0.9zcrx.mongodb.net/newScores?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb://localhost:27017/test
