HU12 Added averageScores to Apprentice DTO

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-spring.data.mongodb.uri=mongodb+srv://camiloxj:mongopassword@cluster0.9zcrx.mongodb.net/ApprenticeScores?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://admin:admin@cluster0.2pbel.mongodb.net/academic-system?retryWrites=true&w=majority
